Flytforbedringer, designforbedringer. Naturlig flyt i administrasjonsløsning.

--- a/Kaffeplaneten/Administrasjon/Administrasjon.csproj
+++ b/Kaffeplaneten/Administrasjon/Administrasjon.csproj
@@ -164,6 +164,7 @@
     <Content Include="Views\AdminLogging\Logging.cshtml" />
     <Content Include="Views\Layout\EmployeeAdminBar.cshtml" />
     <Content Include="Views\AdminEmployee\deleteEmployee.cshtml" />
+    <Content Include="Views\AdminProduct\Details.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
