--- a/Kaffeplaneten/Administrasjon/Administrasjon.csproj
+++ b/Kaffeplaneten/Administrasjon/Administrasjon.csproj
@@ -165,6 +165,7 @@
     <Content Include="Views\Layout\EmployeeAdminBar.cshtml" />
     <Content Include="Views\AdminEmployee\deleteEmployee.cshtml" />
     <Content Include="Views\AdminProduct\Details.cshtml" />
+    <Content Include="Views\AdminProduct\Uploader.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
