--- a/Kaffeplaneten/Administrasjon/packages.config
+++ b/Kaffeplaneten/Administrasjon/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="bootstrap" version="3.0.0" targetFramework="net452" />
+  <package id="bootstrap" version="3.3.5" targetFramework="net452" />
   <package id="EnterpriseLibrary.Common" version="6.0.1304.0" targetFramework="net452" />
   <package id="EnterpriseLibrary.Logging" version="6.0.1304.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
@@ -8,9 +8,13 @@
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebHelpers" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebPages.Data" version="1.0.20105.408" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebPages.Data" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages.WebData" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net452" />
