må for å pulle:(

--- a/Kaffeplaneten/Administrasjon/Web.config
+++ b/Kaffeplaneten/Administrasjon/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <configSections>
-    
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <appSettings>
@@ -58,6 +58,10 @@
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="WebMatrix.Data" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.0.0.0" newVersion="1.0.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.codedom>
@@ -77,5 +81,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-  <add name="DatabaseKaffeplaneten" connectionString="data source=(LocalDb)\v12.0;AttachDbFilename=C:\Users\minik\Desktop\Webapplikasjoner\Kaffeplaneten\Database\DatabaseKaffeplaneten.mdf initialcatalog=Kaffeplaneten.CustomerContext;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
+    <add name="DatabaseKaffeplaneten" connectionString="data source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=C:\Users\Magnus\Documents\GitHubVisualStudio\Webapplikasjoner\Kaffeplaneten\Kaffeplaneten\App_Data\DatabaseKaffeplaneten.mdf initialcatalog=Kaffeplaneten.CustomerContext;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
