--- a/Kaffeplaneten/Administrasjon/Administrasjon.csproj
+++ b/Kaffeplaneten/Administrasjon/Administrasjon.csproj
@@ -188,6 +188,7 @@
     <Content Include="Views\AdminEmployee\deleteEmployee.cshtml" />
     <Content Include="Views\AdminProduct\Details.cshtml" />
     <Content Include="Views\AdminProduct\Uploader.cshtml" />
+    <Content Include="Views\Shared\OrderView.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
